--- a/baekjoon/1006_Jan22.ipynb
+++ b/baekjoon/1006_Jan22.ipynb
@@ -54,19 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "8 100\n",
-      "70 60 55 43 57 60 44 50 58 40 47 90 45 52 80 40\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#솔루션 1\n",
     "\n",
@@ -75,8 +65,7 @@
     "for _ in range(T):\n",
     "    N, W = map(int, input().split())\n",
     "    enemies = dict(enumerate(map(int, input().split())))\n",
-    "    for area in enemies:\n",
-    "        "
+    "    for area in enemies:"
    ]
   },
   {
@@ -317,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +411,7 @@
        " 16: [9, 15, 8]}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,47 +422,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = inner.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 8, 9],\n",
+       " 2: [3, 1, 10],\n",
+       " 3: [4, 2, 11],\n",
+       " 4: [5, 3, 12],\n",
+       " 5: [6, 4, 13],\n",
+       " 6: [7, 5, 14],\n",
+       " 7: [8, 6, 15],\n",
+       " 8: [1, 7, 16],\n",
+       " 9: [10, 16, 1],\n",
+       " 10: [11, 9, 2],\n",
+       " 11: [12, 10, 3],\n",
+       " 12: [13, 11, 4],\n",
+       " 13: [14, 12, 5],\n",
+       " 14: [15, 13, 6],\n",
+       " 15: [16, 14, 7],\n",
+       " 16: [9, 15, 8]}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[False, False, False]\n",
-      "[False, False, True]\n",
-      "[True, False, False]\n",
-      "[True, True, False]\n",
-      "[False, True, False]\n",
-      "[False, False, False]\n",
-      "[True, False, False]\n",
-      "[False, True, True]\n",
-      "[True, True, False]\n",
-      "[True, True, True]\n",
-      "[False, True, False]\n",
-      "[False, False, False]\n",
-      "[True, False, False]\n",
-      "[False, True, False]\n",
-      "[False, False, False]\n",
-      "[True, False, True]\n"
+      "1\n",
+      "{2: False, 8: False, 9: False}\n",
+      "2\n",
+      "{3: False, 1: False, 10: True}\n",
+      "3\n",
+      "{4: True, 2: False, 11: False}\n",
+      "4\n",
+      "{5: True, 3: True, 12: False}\n",
+      "5\n",
+      "{6: False, 4: True, 13: False}\n",
+      "6\n",
+      "{7: False, 5: False, 14: False}\n",
+      "7\n",
+      "{8: True, 6: False, 15: False}\n",
+      "8\n",
+      "{1: False, 7: True, 16: True}\n",
+      "9\n",
+      "{10: True, 16: True, 1: False}\n",
+      "10\n",
+      "{11: True, 9: True, 2: True}\n",
+      "11\n",
+      "{12: False, 10: True, 3: False}\n",
+      "12\n",
+      "{13: False, 11: False, 4: False}\n",
+      "13\n",
+      "{14: True, 12: False, 5: False}\n",
+      "14\n",
+      "{15: False, 13: True, 6: False}\n",
+      "15\n",
+      "{16: False, 14: False, 7: False}\n",
+      "16\n",
+      "{9: True, 15: False, 8: True}\n",
+      "0\n",
+      "{1: [2, 8, 9], 2: [3, 1, 10], 3: [4, 2, 11], 4: [5, 3, 12], 5: [6, 4, 13], 6: [7, 5, 14], 7: [8, 6, 15], 8: [1, 7, 16], 9: [10, 16, 1], 10: [11, 9, 2], 11: [12, 10, 3], 12: [13, 11, 4], 13: [14, 12, 5], 14: [15, 13, 6], 15: [16, 14, 7], 16: [9, 15, 8]}\n"
      ]
     }
    ],
    "source": [
     "count = 0\n",
     "for area in inner:\n",
-    "    my_enemies = enemies[area-1]\n",
-    "    dispatchable = [True if my_enemies + enemies[joint-1] <= W else False for joint in inner[area]]\n",
-    "    if dispatchable.count(True) == 1:\n",
-    "        count += 1\n",
-    "        inner.pop(area)\n",
-    "    print(dispatchable)"
+    "    print(area)\n",
+    "    dispatchable = {joint: enemies[area-1]+ enemies[joint-1] <= W for joint in inner[area]}\n",
+    "    if list(dispatchable.values()).count(True) == 1:\n",
+    "        total.\n",
+    "#     dispatchable = [my_enemies + enemies[joint-1] <= W for joint in inner[area]]\n",
+    "#     if dispatchable.count(True) == 1:\n",
+    "#         count += 1\n",
+    "#         total.pop(area)\n",
+    "#         total.pop(inner[area][dispatchable.index(True)])\n",
+    "#         print(total)\n",
+    "print(count)\n",
+    "print(inner)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -492,10 +551,444 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "areas = list(range(1, 2*N + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 7, 8, 9, 10, 11, 13, 15]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "areas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 8, 9],\n",
+       " 2: [3, 1, 10],\n",
+       " 3: [4, 2, 11],\n",
+       " 4: [5, 3, 12],\n",
+       " 5: [6, 4, 13],\n",
+       " 6: [7, 5, 14],\n",
+       " 7: [8, 6, 15],\n",
+       " 8: [1, 7, 16],\n",
+       " 9: [10, 16, 1],\n",
+       " 10: [11, 9, 2],\n",
+       " 11: [12, 10, 3],\n",
+       " 12: [13, 11, 4],\n",
+       " 13: [14, 12, 5],\n",
+       " 14: [15, 13, 6],\n",
+       " 15: [16, 14, 7],\n",
+       " 16: [9, 15, 8]}"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 70,\n",
+       " 1: 60,\n",
+       " 2: 55,\n",
+       " 3: 43,\n",
+       " 4: 57,\n",
+       " 5: 60,\n",
+       " 6: 44,\n",
+       " 7: 50,\n",
+       " 8: 58,\n",
+       " 9: 40,\n",
+       " 10: 47,\n",
+       " 11: 90,\n",
+       " 12: 45,\n",
+       " 13: 52,\n",
+       " 14: 80,\n",
+       " 15: 40}"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enemies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4]\n",
+    "a.pop(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 4]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "areas = list(range(1, 2*N + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "areas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 8, 9],\n",
+       " 2: [3, 1, 10],\n",
+       " 3: [4, 2, 11],\n",
+       " 4: [5, 3, 12],\n",
+       " 5: [6, 4, 13],\n",
+       " 6: [7, 5, 14],\n",
+       " 7: [8, 6, 15],\n",
+       " 8: [1, 7, 16],\n",
+       " 9: [10, 16, 1],\n",
+       " 10: [11, 9, 2],\n",
+       " 11: [12, 10, 3],\n",
+       " 12: [13, 11, 4],\n",
+       " 13: [14, 12, 5],\n",
+       " 14: [15, 13, 6],\n",
+       " 15: [16, 14, 7],\n",
+       " 16: [9, 15, 8]}"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 70,\n",
+       " 1: 60,\n",
+       " 2: 55,\n",
+       " 3: 43,\n",
+       " 4: 57,\n",
+       " 5: 60,\n",
+       " 6: 44,\n",
+       " 7: 50,\n",
+       " 8: 58,\n",
+       " 9: 40,\n",
+       " 10: 47,\n",
+       " 11: 90,\n",
+       " 12: 45,\n",
+       " 13: 52,\n",
+       " 14: 80,\n",
+       " 15: 40}"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enemies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 8, 9]\n",
+      "[2, 8, 9]\n",
+      "[]\n",
+      "[3, 1, 10]\n",
+      "[3, 10]\n",
+      "[10]\n",
+      "[4, 2, 11]\n",
+      "[4, 11]\n",
+      "[4]\n",
+      "[6, 4, 13]\n",
+      "[6, 13]\n",
+      "[]\n",
+      "[7, 5, 14]\n",
+      "[7, 14]\n",
+      "[]\n",
+      "[8, 6, 15]\n",
+      "[8, 15]\n",
+      "[8]\n",
+      "[10, 16, 1]\n",
+      "[16]\n",
+      "[16]\n",
+      "[12, 10, 3]\n",
+      "[12, 3]\n",
+      "[]\n",
+      "[13, 11, 4]\n",
+      "[13, 4]\n",
+      "[]\n",
+      "[14, 12, 5]\n",
+      "[14, 5]\n",
+      "[14]\n",
+      "[16, 14, 7]\n",
+      "[14]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "\n",
+    "inner_areas = list(range(1, N+1))\n",
+    "outer_areas = list(range(N+1, 2*N+1))\n",
+    "\n",
+    "while len(areas) > 0:\n",
+    "    current = areas[0]\n",
+    "    \n",
+    "    adjoint = [inner_areas[(inner_areas.index(current)+1)%8], inner_areas[(inner_areas.index(current)+7)%8], current+8]  if current < 9 else [outer_areas[(outer_areas.index(current)+1)%8], outer_areas[(outer_areas.index(current)+7)%8], current-8]\n",
+    "    \n",
+    "    for joint in adjoint:\n",
+    "        if joint not in areas:\n",
+    "            adjoint.remove(joint)\n",
+    "    \n",
+    "    dispatchable = [joint for joint in adjoint if enemies[current-1]+ enemies[joint-1] <= W]\n",
+    "    \n",
+    "    if len(dispatchable) == 1:\n",
+    "        areas.remove(current)\n",
+    "        areas.remove(dispatchable[0])\n",
+    "        count += 1\n",
+    "        \n",
+    "    elif len(dispatchable) == 0:\n",
+    "        areas.remove(current)\n",
+    "        count += 1\n",
+    "    \n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "8 100\n",
+      "70 60 55 43 57 60 44 50 58 40 47 90 45 52 80 40\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "#솔루션 1 정리 : --> 런타임 에러\n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, W = map(int, input().split())\n",
+    "    enemies = dict(enumerate(map(int, input().split())))\n",
+    "    \n",
+    "    areas = list(range(1, 2*N+1))\n",
+    "    count = 0\n",
+    "    \n",
+    "    inner_areas = list(range(1, N+1))\n",
+    "    outer_areas = list(range(N+1, 2*N+1))\n",
+    "\n",
+    "    while len(areas) > 0:\n",
+    "        current = areas[0]\n",
+    "\n",
+    "        adjoint = [inner_areas[(inner_areas.index(current)+1)%8], inner_areas[(inner_areas.index(current)+7)%8], current+8]  if current < 9 else [outer_areas[(outer_areas.index(current)+1)%8], outer_areas[(outer_areas.index(current)+7)%8], current-8]\n",
+    "\n",
+    "        for joint in adjoint:\n",
+    "            if joint not in areas:\n",
+    "                adjoint.remove(joint)\n",
+    "\n",
+    "        dispatchable = [joint for joint in adjoint if enemies[current-1]+ enemies[joint-1] <= W]\n",
+    "\n",
+    "        if len(dispatchable) == 1:\n",
+    "            areas.remove(current)\n",
+    "            areas.remove(dispatchable[0])\n",
+    "            count += 1\n",
+    "\n",
+    "        elif len(dispatchable) == 0:\n",
+    "            areas.remove(current)\n",
+    "            count += 1\n",
+    "\n",
+    "        else:\n",
+    "            pass\n",
+    "    \n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#솔루션2: input을 sys.stdin.readline()으로 변경 --> 런타임 에러\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "T = int(sys.stdin.readline())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, W = map(int, sys.stdin.readline().split())\n",
+    "    enemies = dict(enumerate(map(int, sys.stdin.readline().split())))\n",
+    "\n",
+    "    areas = list(range(1, 2 * N + 1))\n",
+    "    count = 0\n",
+    "\n",
+    "    inner_areas = list(range(1, N + 1))\n",
+    "    outer_areas = list(range(N + 1, 2 * N + 1))\n",
+    "\n",
+    "    while len(areas) > 0:\n",
+    "        current = areas[0]\n",
+    "\n",
+    "        adjoint = [inner_areas[(inner_areas.index(current) + 1) % 8], inner_areas[(inner_areas.index(current) + 7) % 8],\n",
+    "                   current + 8] if current < 9 else [outer_areas[(outer_areas.index(current) + 1) % 8],\n",
+    "                                                     outer_areas[(outer_areas.index(current) + 7) % 8], current - 8]\n",
+    "\n",
+    "        for joint in adjoint:\n",
+    "            if joint not in areas:\n",
+    "                adjoint.remove(joint)\n",
+    "\n",
+    "        dispatchable = [joint for joint in adjoint if enemies[current - 1] + enemies[joint - 1] <= W]\n",
+    "\n",
+    "        if len(dispatchable) == 1:\n",
+    "            areas.remove(current)\n",
+    "            areas.remove(dispatchable[0])\n",
+    "            count += 1\n",
+    "\n",
+    "        elif len(dispatchable) == 0:\n",
+    "            areas.remove(current)\n",
+    "            count += 1\n",
+    "\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "    print(count)"
+   ]
   }
  ],
  "metadata": {
